--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,21 +1,90 @@
-	pipeline {
-    agent any
+pipeline {
+agent any
+environment {
+NEXUS_VERSION = "nexus3"
+NEXUS_PROTOCOL = "http"
+NEXUS_URL = "localhost:8081/"
+NEXUS_REPOSITORY = "maven-snapshots"
+NEXUS_CREDENTIAL_ID = "nexus-credentials"
+}
+stages {
+stage('checkout') {
+steps {
+echo ' start checkout..'
+git credentialsId: 'a7a3b467-52a6-4321-8bf4-45618acd8574', url: 'https://github.com/MedAminesadfi/integrationContinu.git'
+echo 'checkout Done..'
+}
+}
+stage('Build') {
+steps {
+echo 'Building..'
+bat label: '', script: '''cd ./maven-demo-1
+mvn clean install'''
+echo 'Building.Done.'
+}
+}
+stage('Test') {
+steps {
+echo 'Testing..'
+bat label: '', script: '''cd ./maven-demo-1
+mvn clean test'''
+echo 'Testing. Done.'
+}
+}
+stage('Deploy') {
+steps {
+echo 'Deploying....'
+}
+}
+stage('publish to nexus') {
+steps {
+echo 'publish to nexus..'
+script {
+// Read POM xml file using 'readMavenPom' step , this step 'readMavenPom' is included in: https://plugins.jenkins.io/pipeline-utility-steps
+pom = readMavenPom file: "./maven-demo-1/pom.xml";
+// Find built artifact under target folder
+filesByGlob = findFiles(glob: "target/*.${pom.packaging}");
+// Print some info from the artifact found
+echo "${filesByGlob[0].name} ${filesByGlob[0].path} ${filesByGlob[0].directory} ${filesByGlob[0].length} ${filesByGlob[0].lastModified}"
+// Extract the path from the File found
+artifactPath = filesByGlob[0].path;
+// Assign to a boolean response verifying If the artifact name exists
+artifactExists = fileExists artifactPath;
+if(artifactExists) {
+echo "*** File: ${artifactPath}, group: ${pom.groupId}, packaging: ${pom.packaging}, version ${pom.version}";
+nexusArtifactUploader(
+nexusVersion: NEXUS_VERSION,
+protocol: NEXUS_PROTOCOL,
+nexusUrl: NEXUS_URL,
+groupId: pom.groupId,
+version: pom.version,
+repository: NEXUS_REPOSITORY,
+credentialsId: NEXUS_CREDENTIAL_ID,
+artifacts: [
+// Artifact generated such as .jar, .ear and .war files.
+[artifactId: pom.artifactId,
+classifier: '',
+file: artifactPath,
+type: pom.packaging],
+// Lets upload the pom.xml file for additional information for Transitive dependencies
+[artifactId: pom.artifactId,
+classifier: '',
+file: "pom.xml",
+type: "pom"]
+]
+);
+} else {
+error "*** File: ${artifactPath}, could not be found";
+}
+}
+}
+}
 
-    stages {
-        stage('Build') {
-            steps {
-                echo 'Building..'
-            }
-        }
-        stage('Test') {
-            steps {
-                echo 'Testing..'
-            }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploying....'
-            }
-        }
-    }
+}
+post {
+always {
+emailext body: 'Bonjour', subject: 'test jenkis', to: 'mohamedamine.sadfi@esprit.tn'
+}
+
+}
 }
